--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -33,8 +33,15 @@ jobs:
         with:
           go-version: "1.25.1"
 
+      - name: Install staticcheck
+        run: go install honnef.co/go/tools/cmd/staticcheck@latest
+
       - name: Check and Format
         run: test -z $(go fmt ./...)
 
       - name: Fail on not formatted
         run: echo $?
+
+      - name: Run Staticcheck
+        run: staticcheck ./...
+      
