--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -19,7 +19,7 @@ jobs:
           go-version: "1.25.1"
 
       - name: Build the app 
-        run:  scripts/buildprod.sh
+        run:  ./scripts/buildprod.sh
       
 
 
