--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -32,8 +32,9 @@ jobs:
       - name: 'Use gcloud CLI'
         run: 'gcloud info'
       
-      - name: 'Build & Push to AR'
-        run: 'gcloud builds submit --tag us-central1-docker.pkg.dev/notely-488314/notely-ar-repo/notely:${{ github.sha }} .'
+      - name: Build & Push (sha + latest)
+        run: |
+          gcloud builds submit --config cloudbuild.yaml .
       
 
 
