--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -32,9 +32,48 @@ jobs:
       - name: 'Use gcloud CLI'
         run: 'gcloud info'
       
-      - name: Build & Push (sha + latest)
-        run: |
-          gcloud builds submit --config cloudbuild.yaml .
+      - name: 'Build & Push to AR'
+        run: 'gcloud builds submit --tag us-central1-docker.pkg.dev/notely-488314/notely-ar-repo/notely:${{ github.sha }} .'
+
+      name: cd
+
+on:
+  push:
+    branches: [main]
+  
+jobs:
+  deploy:
+    name: Deploy
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Check out code
+        uses: actions/checkout@v4
+
+      - name: Set up Go
+        uses: actions/setup-go@v5
+        with:
+          go-version: "1.25.1"
+
+      - name: Build the app 
+        run:  ./scripts/buildprod.sh
+
+      - id: 'auth'
+        uses: 'google-github-actions/auth@v2'
+        with:
+          credentials_json: '${{ secrets.GCP_CREDENTIALS }}'
+
+      - name: 'Set up Cloud SDK'
+        uses: 'google-github-actions/setup-gcloud@v3'
+
+      - name: 'Use gcloud CLI'
+        run: 'gcloud info'
+        
+      - name: 'Build & Push to AR'
+        run: 'gcloud builds submit --tag us-central1-docker.pkg.dev/notely-488314/notely-ar-repo/notely:${{ github.sha }} .'
+        
+      - name: 'Tag as latest'
+        run: 'gcloud artifacts docker tags add us-central1-docker.pkg.dev/notely-488314/notely-ar-repo/notely:${{ github.sha }} us-central1-docker.pkg.dev/notely-488314/notely-ar-repo/notely:latest'
       
 
 
