now should build

--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -27,6 +27,9 @@ jobs:
       - name: 'Make sure goose installed'
         run: goose -version
 
+      - name: 'Build app'
+        run: ./scripts/buildprod.sh
+
       - id: 'auth'
         uses: 'google-github-actions/auth@v2'
         with:
